Thu Dec 30 13:22:25 2004  Chris Cleeland  <cleeland@ociweb.com>

        * TAO version 1.4.3 released.

Thu Dec 30 12:53:48 2004  Chris Cleeland  <cleeland@ociweb.com>

	* NEWS: Updated to include latest release news.

Tue Dec 28 19:49:00 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* Release:

	  Updated the name of the target for generating the textual
	  version of TAO-INSTALL.html file.

Mon Dec 27 16:02:20 2004  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/FaultTolerance/IOGR/run_test.pl:

          Increased the timeout for waiting for the manager (to short for
          windows machines).

Sat Dec 25 20:53:25 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* Release:

	  Added INSTALL target which generates textual version of 
	  TAO-INSTAll.html and some autoconf files for the release.

Sat Dec 25 15:12:36 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* interop-tests/wchar/client.cpp:
	* interop-tests/wchar/server.cpp:

	  Removed ace/streams.h inclusion which seems to be triggering
	  problems on SuSe. This exclusion should be okay as the file
	  seems to compile fine without these inclusions.

Thu Dec 23 16:35:22 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* orbsvcs/tests/InterfaceRepo/Application_Test/ifr_dii_client.cpp:

	  Fixed warnings in VC6 builds.

Thu Dec 23 14:44:36 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Notify/EventTypeSeq.cpp:

	  A more portable fix for warnings, errors and other compiler
	  oddities.

Wed Dec 22 11:38:23 2004  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/AVStreams/Full_Profile/run_test.pl:
        * orbsvcs/tests/AVStreams/Multicast/run_test.pl:

          The size of the test date file generated was incorrect for all
          platforms.  It assumed a 64KB maximum packet size which is
          incorrect for windows and some additional platforms.
