@@ -3,7 +3,7 @@
 #include "orbsvcs/Time_Utilities.h"
 
 #if !defined (__ACE_INLINE__)
-# include "orbsvcs/orbsvcs/Time_Utilities.i"
+# include "orbsvcs/Time_Utilities.i"
 #endif /* __ACE_INLINE__ */
 
 ACE_RCSID(orbsvcs, Time_Utilities, "$Id$")
